# fgc-inspect

./: .env.example  .gitignore  README.md  RESULTS.md  analysis.py  compare_to_fgc.py  pyproject.toml
data/: README.md  generate_data.py  schema.py
results/: summary.txt
src/: dataset.py  prompts.py  run_all.py  scorer.py  solver.py  tasks.py
src/logs/smoke/: 2026-05-20T18-46-13-00-00_fgc-inspect_8E7qhKm88kRdmuWDkS8e4Z.eval  2026-05-20T18-56-28-00-00_fgc-inspect_NRFRJ74gUC9xv6KxUgQGpX.eval  2026-05-20T18-57-22-00-00_fgc-inspect_kQrmZmL28iT7W8smTEVMbZ.eval  2026-05-20T18-58-20-00-00_fgc-inspect_WhnBJjWAe5rAW6Qd8PQKV8.eval  2026-05-20T18-59-18-00-00_fgc-inspect_XoKkicTrW5iNoLTR8qsAWo.eval  2026-05-20T19-11-46-00-00_fgc-inspect_nJNX9iZsF29PLyuYSQVq74.eval  2026-05-20T19-14-24-00-00_fgc-inspect_nSecpCWfzgLpBNaR5dobz7.eval  2026-05-20T19-16-50-00-00_fgc-inspect_3Fsort36DvhchHN3M9irk8.eval
